[gd_scene load_steps=8 format=3 uid="uid://b2onvmb5ahwm8"]

[ext_resource type="Script" path="res://state.gd" id="1_jfnmm"]
[ext_resource type="Script" path="res://input_handling.gd" id="2_u2n2t"]
[ext_resource type="Script" path="res://persistent_state.gd" id="3_bfaso"]
[ext_resource type="Texture2D" uid="uid://cb1v5vthe5tip" path="res://PLACEHOLDERpng.png" id="4_rm6or"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_iybck"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ymc6k"]
size = Vector2(10000, 271)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_j0mpk"]
size = Vector2(138, 285)

[node name="Node2D" type="Node2D"]
position = Vector2(0, 1)
script = ExtResource("1_jfnmm")

[node name="Floor" type="StaticBody2D" parent="."]
position = Vector2(-2, 0)
physics_material_override = SubResource("PhysicsMaterial_iybck")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Floor"]
position = Vector2(350.5, 150)
shape = SubResource("RectangleShape2D_ymc6k")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(2, -257)

[node name="Player1" type="CharacterBody2D" parent="."]
show_behind_parent = true
top_level = true
position = Vector2(-400, -140)
safe_margin = 0.001
script = ExtResource("2_u2n2t")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player1"]
position = Vector2(-0.75, -3.5)
shape = SubResource("RectangleShape2D_j0mpk")
disabled = true
debug_color = Color(0, 0.6, 0.701961, 0.419608)

[node name="Player1State" type="Node2D" parent="Player1" node_paths=PackedStringArray("opponent")]
position = Vector2(400, 140)
script = ExtResource("3_bfaso")
opponent = NodePath("../../Player2")

[node name="PlayerSprite" type="Sprite2D" parent="Player1/Player1State"]
position = Vector2(-400, -143)
texture = ExtResource("4_rm6or")

[node name="Player2" type="CharacterBody2D" parent="."]
show_behind_parent = true
top_level = true
position = Vector2(400, -140)
script = ExtResource("2_u2n2t")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player2"]
position = Vector2(-0.75, -3.5)
shape = SubResource("RectangleShape2D_j0mpk")
disabled = true
debug_color = Color(0, 0.6, 0.701961, 0.419608)

[node name="Player2State" type="Node2D" parent="Player2" node_paths=PackedStringArray("opponent")]
script = ExtResource("3_bfaso")
opponent = NodePath("../../Player1")

[node name="PlayerSprite" type="Sprite2D" parent="Player2/Player2State"]
position = Vector2(-1, -4)
texture = ExtResource("4_rm6or")
